add footer ex contact person

--- a/src/input.css
+++ b/src/input.css
@@ -15,3 +15,9 @@
     text-shadow: 0 0 32px rgba(0, 0, 0, 0.6), 0 0 86px rgba(0, 0, 0, 0.4);
   }
 }
+
+@layer components {
+  .bg-footer {
+    @apply bg-gradient-to-b from-[#290f48] to-[#3F0089] 
+  }
+}
