--- a/src/input.css
+++ b/src/input.css
@@ -18,6 +18,9 @@
 
 @layer components {
   .bg-footer {
-    @apply bg-gradient-to-b from-[#290f48] to-[#3F0089] 
+    @apply bg-gradient-to-b from-[#290f48] to-[#3F0089];
   }
+}
+
+@layer utilities {
 }
